--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
+/* font import */
+@font-face {
+  font-family: DoodleFont;
+  src: url(./fonts/DoodleFont.ttf);
+  font-weight: normal;
+}
+@font-face {
+  font-family: HKGrotesk;
+  src: url(./fonts/HKGrotesk-Bold.ttf);
+  font-weight: bold;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
+body {
+  background-color: grey;
+  margin: 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Container {
+  width: 917px;
+  height: 921px;
+  background: #ffffff;
+  border: 2px solid #000000;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+  align-self: center;
+  padding: 0px 70px 0px 70px;
+}
+* {
+  font-family: DoodleFont;
+}
+h1 {
+  margin-top: 15px;
+}
+h3 {
+  margin-top: 20px;
+  font-size: 22px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.41em;
+}
+.Heading {
+  text-align: start;
+  font-size: 30px;
+  margin-top: 25px;
+}
+.EnterMessage {
+  text-align: start;
+  font-family: HKGrotesk;
+  color: red;
+  margin-top: 5px;
 }
