--- a/src/App.css
+++ b/src/App.css
@@ -18,17 +18,17 @@
   min-height: 100vh;
 }
 body {
-  background-color: grey;
+  background-color: white;
   margin: 0;
 }
 .Container {
   width: 917px;
   height: 980px;
-  background: #ffffff;
+  background: #fefff6;
   border: 2px solid #000000;
-  box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 25px;
+  border: 1px solid #7b7b7b;
+  box-shadow: 4px 4px 9px rgba(0, 0, 0, 0.25);
+  border-radius: 12px;
   align-self: center;
   padding: 0px 70px 0px 70px;
 }
