--- a/src/styles/EnterTaskColumn.css
+++ b/src/styles/EnterTaskColumn.css
@@ -26,4 +26,6 @@
   margin-top: 20px;
   margin-bottom: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  /* margin-right: 0px;
+  margin-left: 0px; */
 }
