--- a/src/styles/TaskColumn.css
+++ b/src/styles/TaskColumn.css
@@ -55,3 +55,13 @@
 .TaskColumn .col-11 {
   padding: 0;
 }
+.NumberBox {
+  margin-top: 12px;
+  margin-left: 17px;
+  background: #ffffff;
+  border: 2px solid #000000;
+  box-sizing: border-box;
+  border-radius: 3px;
+  width: 23px;
+  height: 23px;
+}
