--- a/src/styles/TaskRow.css
+++ b/src/styles/TaskRow.css
@@ -1,4 +1,4 @@
-.TaskColumn-right {
+.TaskRow-right {
   /* width: 702px;
   height: 50px;
   background: #ffe5c4;
@@ -16,10 +16,10 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0px 20px 20px 0px;
 }
-.TaskColumn-right p {
+.TaskRow-right p {
   margin-top: 10px;
 }
-.TaskColumn-left {
+.TaskRow-left {
   /* width: 51px;
   height: 50px;
   background: #ffe5c4;
@@ -37,7 +37,7 @@
   margin-top: 15px;
   margin-right: 0;
 }
-.TaskColumn p {
+.TaskRow p {
   text-align: start;
   margin-left: 15px;
   font-size: 20px;
@@ -49,10 +49,10 @@
 .row {
   margin: 0 auto;
 }
-.TaskColumn .col-1 {
+.TaskRow .col-1 {
   padding: 0;
 }
-.TaskColumn .col-11 {
+.TaskRow .col-11 {
   padding: 0;
 }
 .NumberBox {
